--- a/styles/main.css
+++ b/styles/main.css
@@ -1,23 +1,72 @@
+html {
+    
+    background-color: #bebdbd;
+}
 
+h1 {
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: 100;
+    font-size: 2.3em;
+    color: rgb(0, 0, 0);
+    text-shadow: 0px 2px 3px #4fa6c05b;
+}
+
+form {
+    border: rgb(150, 150, 150);
+    background-color: rgb(230, 230, 230);
+    width: 205px;
+    padding-bottom: 10px;
+    padding-top: 2px;
+    border-radius: 15px;
+    box-shadow: 0px 3px 3px #4fa6c05b
+}
 
 fieldset {
     display: flex;
     flex-direction: column;
+    width: 200px;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: small;
+    border: none;
 }
 
 input {
     width: 175px;
+    border-radius: 5px;
+    border: none;
+    height: 20px;
+}
+textarea {
+    border-radius: 5px;
+    border: none;
 }
 
 select {
-    width: 100px;
+    width: 95px;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: small;
+    border-radius: 5px;
+    border: none;
 }
 
 input[type="submit"] {
-    margin-left: 2px;
+    margin: 10px 13px 0px 13px;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: small;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+}
+input[type="submit"]:hover {
+    background-color: #4fa6c0;
+    box-shadow: 0px 15px 20px rgba(46, 162, 229, 0.4);
+    color: #fff;
+    transform: translateY(-5px);
+  }
+
+a {
+    color:black;
 }
 
 footer {
-    padding:15px 0px 5px 0px;
-    margin: 15px 0px 5px 0px;
+    padding: 20px 0px 5px 0px;
+    margin: 20px 0px 5px 0px;
 }
