--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -11,6 +11,24 @@ h1 {
     text-shadow: 0px 2px 3px #4fa6c05b;
 }
 
+h2 {
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: 100;
+    font-size: 1.5em;
+    color: rgb(0, 0, 0);
+    text-shadow: 0px 1px 1px #4fa6c05b;
+}
+
+p {
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: 100;
+    font-size: 1em;
+    color: rgb(0, 0, 0);
+   
+}
+
+
+
 form {
     border: rgb(150, 150, 150);
     background-color: rgb(230, 230, 230);
@@ -63,7 +81,7 @@ input[type="submit"]:hover {
   }
 
 a {
-    color:black;
+    color:rgb(0, 0, 0);
 }
 
 footer {
